# arsenic

./: .appveyor.yml  .clang-format  .directory  .gitignore  .gitmodules  .travis.yml  Arsenic.pro  CMakeLists.txt  CNAME  Constants.h  Dockerfile  FORMAT_en.md  FORMAT_fr.md  PKGBUILD  README.md  README.rst  README_FR.md  about.cpp  about.h  appveyor.yml  arsenic.pro  arsenic_en.ts  build.sh  build_clang.sh  build_gcc.sh  build_linux.sh  build_windows_msvc.cmd  config.cpp  config.h  config.ui  defaults.pri  faiblesses  git.sh  gitpush-release.sh  gitpush.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  preferences.h  (+3 more)
.github/workflows/: build.yml  build_arsenic.yml  publish.yml
about_files/en/: en_about_botan.html
about_files/fr/: fr_about_argon2.html  fr_about_arsenic.html
arscore/: CryptoThread.cpp  CryptoThread.h  TripleCryptoThread.cpp  TripleCryptoThread.h  arscore.pro  consts.h  cryptoengine.cpp  cryptoengine.h  fileCrypto.h  libexport.h  messages.cpp  messages.h  passwordGenerator.cpp  passwordGenerator.h  simplecryptoengine.cpp  simplecryptoengine.h  textcrypto.cpp  textcrypto.h  triplecryptoengine.cpp  triplecryptoengine.h  tripleencryption.cpp  tripleencryption.h  utils.cpp  utils.h
arsenic/: Config.cpp  Config.h  Constants.h  Delegate.cpp  Delegate.h  Translator.cpp  about.cpp  about.h  about.ui  aboutDialog.cpp  aboutDialog.h  aboutDialog.ui  argonTests.h  arsenic.pro  arsenic.qrc  arsenic_en.qm  clipboard.cpp  clipboard.h  config.cpp  config.h  config.ui  configDialog.cpp  configDialog.ui  constants.h  consts.h  fileCrypto.cpp  fileCrypto.h  hashcheckdialog.cpp  loghtml.cpp  loghtml.h  main.cpp  main_save.cpp  mainclass.cpp  mainclass.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  messages.h  passwordGenerator.cpp  passwordGeneratorDialog.cpp  (+9 more)
arsenic/about_files/: botan_license.txt
arsenic/crypto/: Crypto.cpp  Crypto.h  argonhash.cpp  argonhash.h  hash_tool.cpp  hash_tool.h
arsenic/languages/: arsenic_en_US.qm  arsenic_en_US.ts  (+4 more)
arsenic_cli/: arsenic_cli.pro  main.cpp
arsenic_gui/: Config.cpp  Config.h  Delegate.cpp  Delegate.h  Translator.cpp  aboutDialog.cpp  aboutDialog.h  aboutDialog.ui  arsenic_gui.pro  clipboard.h  configDialog.cpp  configDialog.h  configDialog.ui  hashcheckdialog.cpp  loghtml.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  passwordGeneratorDialog.cpp  passwordGeneratorDialog.h  passwordGeneratorDialog.ui  progressbar.h  rsc.qrc
cli_arsenic/: cli_arsenic.pro  main.cpp
cmake/: FindBotan.cmake
crypto/: .directory  Crypto.cpp  Delegate.cpp  argonhash.cpp  hash_tool.cpp  hash_tool.h
images/: .directory
installer/: .gitignore  installer.iss
screenshots/: file_format.xcf
share/translations/: CMakeLists.txt  arsenic_en_US.ts  arsenic_fr_FR.ts
src/: CMakeLists.txt  Clipboard.cpp  Clipboard.h  Config.cpp  Config.h  Translator.cpp  aboutDialog.cpp  aboutDialog.h  aboutDialog.ui  argonTests.ui  cli.cpp  cli.h  configDialog.cpp  configDialog.ui  hashcheckdialog.cpp  hashcheckdialog.h  hashcheckdialog.ui  loghtml.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  passwordGeneratorDialog.cpp  passwordGeneratorDialog.h  passwordGeneratorDialog.ui  rsc.qrc  skin.h
src/arscore/: CryptoThread.cpp  CryptoThread.h  PasswordGenerator.cpp  PasswordGenerator.h  PasswordHealth.cpp  PasswordHealth.h  Random.cpp  Random.h  SimpleCryptoThread.h  consts.cpp  consts.h  library.h  messages.cpp  messages.h  simplecryptoengine.cpp  simplecryptoengine.h  textcrypto.cpp  textcrypto.h  triplecryptoengine.cpp  triplecryptoengine.h  utils.cpp  utils.h
src/arsenic/: AboutDialog.cpp  AboutDialog.ui  Clipboard.cpp  Config.cpp  Config.h  Delegate.cpp  Delegate.h  Derivation.cpp  Derivation.h  PasswordGenerator.cpp  PasswordGeneratorWidget.cpp  PasswordGeneratorWidget.h  PasswordGeneratorWidget.ui  aboutDialog.cpp  aboutDialog.h  aboutDialog.ui  abstractbarDialog.cpp  abstractbarDialog.h  abstractbarDialog.ui  argonTests.cpp  argonTests.h  argontests.cpp  argontests.h  argontests.ui  arsenic.pro  clipboard.cpp  clipboard.h  conf.cpp  conf.h  conf.ui  config.cpp  config.h  config.ui  configDialog.cpp  configDialog.h  configDialog.ui  constants.h  crypto.cpp  crypto.h  decrypt.cpp  (+81 more)
src/arsenic/desktop/: arsenic.desktop
src/arsenic/languages/: arsenic_en.ts  arsenic_fr.qm  arsenic_fr.ts
src/botan/: botan.pro
src/botan/clang/: botan_all.h  botan_all_aesni_sse2_ssse3.cpp  botan_all_rdseed_sse2.cpp  botan_all_sha_sse2_sse41_ssse3.cpp
src/botan/gcc/: botan_all_aesni_sse2_ssse3.cpp  botan_all_sha_sse2_sse41_ssse3.cpp
src/botan/linux_clang/: botan_all.h
src/botan/linux_clang64/: botan_all.cpp  botan_all.h  botan_all_aesni_sse2_ssse3.cpp  botan_all_internal.h  botan_all_sha_sse2_sse41_ssse3.cpp  botan_all_sha_sse2_ssse3.cpp  botan_all_sse2_ssse3.cpp
src/botan/linux_gcc/: botan_all.h
src/botan/linux_gcc64/: botan_all.cpp  botan_all.h  botan_all_aesni_sse2_ssse3.cpp  botan_all_avx2.cpp  botan_all_bmi2.cpp  botan_all_rdrand.cpp  botan_all_rdseed_sse2.cpp  botan_all_sha_sse2_sse41_ssse3.cpp  botan_all_sha_sse2_ssse3.cpp  botan_all_sse2_ssse3.cpp
src/botan/win/: botan_all.cpp  botan_all.h  botan_all_aesni_sse2_ssse3.cpp  botan_all_avx2.cpp  botan_all_bmi2.cpp  botan_all_internal.h  botan_all_rdrand.cpp  botan_all_sha_sse2_sse41_ssse3.cpp  botan_all_sha_sse2_ssse3.cpp  botan_all_sse2_ssse3.cpp
src/botan/win_mingw32/: botan_all.cpp  botan_all.h  botan_all_aesni_sse2_ssse3.cpp  botan_all_bmi2.cpp  botan_all_sse2_ssse3.cpp
src/botan/win_mingw64/: botan_all.cpp  botan_all.h  botan_all_aesni_sse2_ssse3.cpp  botan_all_avx2.cpp  botan_all_bmi2.cpp  botan_all_internal.h  botan_all_rdseed_sse2.cpp  botan_all_sse2_ssse3.cpp
src/botan/win_msvc_64/: botan_all.cpp  botan_all.h  botan_all_avx2.cpp  botan_all_internal.h  botan_all_rdseed_sse2.cpp
src/quazip/: quazip.pro
src/skin/: skin.cpp  skin.h
src/tests/: main.cpp  tests.pro
src/zlib/: zlib.pro
src/zxcvbn/: CMakeLists.txt  zxcvbn.c  zxcvbn.pro
tests/: main.cpp  test1.txt  test_crypto.cpp  tests.pro  testsarsenic.cpp
tests_arsenic/: main.cpp  tests_arsenic.pro
(+39 files in other folders)
